sparse-struct/tests/ui/union.stderr
error: `SparseStruct` can only be derived for `enum`s
 --> tests/ui/union.rs:4:1
  |
4 | union Union {
  | ^^^^^
